# note-app-rs

./: Cargo.toml  README.md
migrations/2020-11-12-020856_create_notes/: down.sql  up.sql
src/: data.rs  main.rs
src/data/: models.rs  schema.rs
