[package]
name = "web-rs"
version = "0.1.0"
authors = ["Mirza Prasovic <mpasovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0"
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["sqlite", "uuidv07", "chrono"]}
diesel_migrations = "1.4.0"
chrono = { version = "0.4.11", features = ["serde"]}
dotenv = "0.15.0"
uuid = { version = "0.8", features= ["serde", "v4"]}